--- a/app/src/main/res/layout/activity_logout.xml
+++ b/app/src/main/res/layout/activity_logout.xml
@@ -13,11 +13,11 @@
         android:paddingLeft="24dp"
         android:paddingRight="24dp">
 
-        <ImageView android:src="@drawable/logo"
-            android:layout_width="wrap_content"
-            android:layout_height="72dp"
-            android:layout_marginBottom="24dp"
-            android:layout_gravity="center_horizontal" />
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/source" />
 
         <Button
             android:text="Settings"
@@ -56,6 +56,6 @@
         android:id="@+id/btn_logout"
         android:layout_weight="1" />
 
-    </LinearLayout>
+    </LinearLayout>-->
 
 </ScrollView>
