--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,10 +14,29 @@
         android:paddingRight="24dp">
 
         <ImageView android:src="@drawable/h2g0logo"
+            android:id="@+id/h2g0"
             android:layout_width="wrap_content"
             android:layout_height="120dp"
             android:layout_marginBottom="56dp"
             android:layout_gravity="center_horizontal" />
+
+        <Button
+            android:id="@+id/btnZoomIn"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="24dp"
+            android:padding="12dp"
+            android:text="Zoom In"/>
+
+        <Button
+            android:id="@+id/btnZoomOut"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="24dp"
+            android:padding="12dp"
+            android:text="Zoom Out"/>
 
         <!-- Email Label -->
         <android.support.design.widget.TextInputLayout
@@ -61,6 +80,12 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="30dp"
             android:layout_marginBottom="30dp" />
+
+        <com.twitter.sdk.android.core.identity.TwitterLoginButton
+            android:id="@+id/twitter_login_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"/>
 
         <TextView android:id="@+id/link_signup"
             android:layout_width="fill_parent"
